<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".remote.calculator.LoveCalculatorFragment"
    android:padding="16dp"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_heart"
        android:layout_marginBottom="20dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/love_calculator"
        android:textColor="@color/design_default_color_primary"
        android:textStyle="bold"
        android:layout_gravity="start"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:layout_gravity="start"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstNameEd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/you"/>
    </com.google.android.material.textfield.TextInputLayout>





    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_name"
            android:layout_gravity="start"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/secondNameEd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/me"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:textAllCaps="false"
        android:id="@+id/btn_calculate"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="100dp"/>



</LinearLayout>